<resources>
    <string name="app_name">MovieListApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watch_trailer">WATCH TRAILER</string>
    <string name="remove_from_watchlist">REMOVE FROM WATCHLIST</string>
    <string name="tenet">Tenet</string>
    <string name="_7_8">7.8</string>
    <string name="_10">/10</string>
    <string name="short_description">Short description</string>
    <string name="details">Details</string>
    <string name="released_date">Released date</string>
    <string name="action_sci_fi">Action, Sci-Fi</string>
    <string name="_2020_3_september">2020, 3 September</string>
    <string name="sort">Sort</string>
    <string name="movies">Movies</string>
</resources>